--- a/Protótipo Atlas/sourceAtlasPrototype/css/modal.css
+++ b/Protótipo Atlas/sourceAtlasPrototype/css/modal.css
@@ -19,19 +19,14 @@
 }
 
 #nameFeatureTextField, #featureTypeComboBox {
+    border-radius: 4px;
+    line-height: 1.5em;
+    padding: 0.5em 3.5em 0.5em 1em;
     display: block;
     width: 70%;
     border: 1px solid #ccc;
     box-sizing: border-box;
     margin: 2% 15%;
-}
-
-#createFeatureSubmitButton {
-    background-color: #225889;
-    color: #fff;
-    cursor: pointer;
-    width: 40%;
-    margin: 20px 30%;
 }
 
 
@@ -63,20 +58,12 @@
     margin: 2% 15%;
 }
 
-#loadFileSubmitButton {
-    background-color: #225889;
-    color: #fff;
-    cursor: pointer;
-    width: 40%;
-    margin: 20px 30%;
-}
-
 
 /*Association Modal*/
 
 .associationModal {
     display: none;
-    position: fixed;    
+    position: fixed;
     left: 5%;
     top: 30%;
     z-index: 5;
@@ -101,14 +88,6 @@
     margin: 2% 15%;
 }
 
-#createAssociationSubmitButton {
-    background-color: #225889;
-    color: #fff;
-    cursor: pointer;
-    width: 40%;
-    margin: 20px 30%;
-}
-
 
 /* Close Button */
 
@@ -122,4 +101,56 @@
     color: #000;
     text-decoration: none;
     cursor: pointer;
+}
+
+
+/*change ComboBox*/
+
+select {
+    min-width: 200px;
+    background-color: white;
+    border-radius: 4px;
+    display: inline-block;
+    font: inherit;
+    line-height: 1.5em;
+    padding: 0.5em 3.5em 0.5em 1em;
+    margin: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+}
+
+select {
+    background-image: linear-gradient(45deg, transparent 50%, gray 50%), linear-gradient(135deg, gray 50%, transparent 50%), radial-gradient(#ddd 70%, transparent 72%);
+    background-position: calc(100% - 20px) calc(1em + 2px), calc(100% - 15px) calc(1em + 2px), calc(100% - .5em) .5em;
+    background-size: 5px 5px, 5px 5px, 1.5em 1.5em;
+    background-repeat: no-repeat;
+}
+
+/*change all buttons on modals*/
+button#createAssociationSubmitButton, button#loadFileSubmitButton, button#createFeatureSubmitButton{
+    background-color: #225889;
+    padding: 0.5em 1.5em 0.5em 1em;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    width: 40%;
+    margin: 20px 30%;
+    font: inherit;
+    border-style: inherit;
+    border-color: #fff;
+    font-weight: bold;
+}
+
+button#showJSON, button#SaveButton, button#loadButton{
+    background-color: #225889;
+    padding: 0.5em 1.5em 0.5em 1em;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;    
+    font: inherit;    
+    border-color: #F1F1F1;
+    font-weight: bold;
 }
