--- a/Protótipo Atlas/sourceAtlasPrototype/css/main.css
+++ b/Protótipo Atlas/sourceAtlasPrototype/css/main.css
@@ -19,7 +19,8 @@ body {
 /*Top bar and icons*/
 
 .topBar {
-    height: 10%;
+    /*height: 10%;*/
+    height: calc;
     width: 100%;
     position: fixed;
     top: 0;
@@ -52,7 +53,7 @@ body {
 
 .sideBar {
     height: 100%;
-    width: 70px;
+    width: calc(5em+1vh);
     position: fixed;
     top: 10%;
     left: 0px;
@@ -64,9 +65,7 @@ body {
     display: block;
     text-align: center;
     padding: 2vh;
-    color: #fff;
-    /*font-size: 5vh;*/
-    /*font-size: 2vw;*/
+    color: #fff;   
     z-index: 1;
 }
 
@@ -87,47 +86,14 @@ body {
 
 /*Canvas*/
 
-.canvas {
-    /*top: 10%;*/
-    /*left: 10%;*/
-    /*bottom: 0px;*/
-    /*right: 0px;*/
-    background-color: #fff;
-    /*height: 100%;*/
+.canvas {  
+    background-color: #fff;   
     z-index: -3;
 }
 
 .jsonText {
     z-index: -1;
 }
-
-
-/*RightClick Menu*/
-
-.rightClickMenuCanvas li {
-    text-align: center;
-    list-style-type: none;
-}
-
-.rightClickMenuCanvas li a {
-    color: white;
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.rightClickMenuCanvas {
-    display: none;
-    position: absolute;
-    z-index: 10;
-    padding: 12px 0;
-    width: 200px;
-    background-color: #225889;
-}
-
-.rightClickMenuCanvasActive {
-    display: block;
-}
-
 
 /*Side Bar tooltips*/
 
@@ -147,7 +113,7 @@ body {
 }
 
 
-/*arrow*/
+/*tooltip arrow*/
 
 .sideBar .tooltip::after {
     content: "";
